--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <pre><code>@inproceedings{2025selfcross,
   author    = {Weimin, Qiu and Jieke, Wang and Meng, Tang},
   title     = {Self-Cross Diffusion Guidance for Text-to-Image Synthesis of Similar Subjects},
-  booktitle   = {CVPR},
+  booktitle   = {Computer Vision and Pattern Recognition Conference},
   year      = {2025},
 }</code></pre>
   </div>
