--- a/index.html
+++ b/index.html
@@ -246,6 +246,72 @@
                 <td><img src="static/images-for-githubio/ours/a parrot and a pigeon and a sparrow/1278355521.png"></td>
             </tr>
           </table>
+
+          <p>
+            Qualitative comparisons between original SD2.1 and our method.
+          </p>
+          <table>
+            <tr>
+                <th>prompt</th>
+                <th colspan="4">a bear and a horse</th>
+            </tr>
+            <tr>
+                <th>SD2</th>
+                <td><img src="static/images-for-githubio/sd2/original/a bear and a horse/1157952081.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/original/a bear and a horse/2024290418.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/original/a bear and a horse/2090184951.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/original/a bear and a horse/2113536712.png" alt="Alice"></td>
+            </tr>
+            <tr>
+                <th>Ours</th>
+                <td><img src="static/images-for-githubio/sd2/ours/a bear and a horse/1157952081.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/ours/a bear and a horse/2024290418.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/ours/a bear and a horse/2090184951.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/ours/a bear and a horse/2113536712.png" alt="Alice"></td>
+            </tr>
+          </table>
+
+          <table>
+            <tr>
+                <th>prompt</th>
+                <th colspan="4">a bear and a rabbit</th>
+            </tr>
+            <tr>
+                <th>SD2</th>
+                <td><img src="static/images-for-githubio/sd2/original/a bear and a rabbit/709115539.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/original/a bear and a rabbit/771886858.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/original/a bear and a rabbit/944355760.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/original/a bear and a rabbit/2024290418.png" alt="Alice"></td>
+            </tr>
+            <tr>
+                <th>Ours</th>
+                <td><img src="static/images-for-githubio/sd2/ours/a bear and a rabbit/709115539.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/ours/a bear and a rabbit/771886858.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/ours/a bear and a rabbit/944355760.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/ours/a bear and a rabbit/2024290418.png" alt="Alice"></td>
+            </tr>
+          </table>
+
+          <table>
+            <tr>
+                <th>prompt</th>
+                <th colspan="4">a lion and a monkey</th>
+            </tr>
+            <tr>
+                <th>SD2</th>
+                <td><img src="static/images-for-githubio/sd2/original/a lion and a monkey/16301755.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/original/a lion and a monkey/41535079.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/original/a lion and a monkey/1476362273.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/original/a lion and a monkey/2024290418.png" alt="Alice"></td>
+            </tr>
+            <tr>
+                <th>Ours</th>
+                <td><img src="static/images-for-githubio/sd2/ours/a lion and a monkey/16301755.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/ours/a lion and a monkey/41535079.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/ours/a lion and a monkey/1476362273.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/sd2/ours/a lion and a monkey/2024290418.png" alt="Alice"></td>
+            </tr>
+          </table>
         </div>
 
       <!--/ Visual Effects. -->
@@ -255,9 +321,12 @@
     <!-- Related Work. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Related Work</h2>
+        <h2 class="title is-3">Related Links</h2>
 
         <div class="content has-text-justified">
+          <p>
+            There's a lot of excellent work that was introduced around the same time as ours.
+          </p>
           <p>
             <a href="https://conform-diffusion.github.io/">CONFORM: Contrast is All You Need For High-Fidelity Text-to-Image Diffusion Models</a>
             introduces a contrastive loss between cross attention maps.
@@ -288,7 +357,7 @@
     <pre><code>@inproceedings{2025selfcross,
   author    = {Weimin, Qiu and Jieke, Wang and Meng, Tang},
   title     = {Self-Cross Diffusion Guidance for Text-to-Image Synthesis of Similar Subjects},
-  booktitle   = {Computer Vision and Pattern Recognition Conference},
+  booktitle   = {CVPR},
   year      = {2025},
 }</code></pre>
   </div>
@@ -297,6 +366,15 @@
 
 <footer class="footer">
   <div class="container">
+    <div class="content has-text-centered">
+      <a class="icon-link"
+         href="./static/videos/nerfies_paper.pdf">
+        <i class="fas fa-file-pdf"></i>
+      </a>
+      <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="content">
