--- a/index.html
+++ b/index.html
@@ -313,11 +313,112 @@
             </tr>
           </table>
         </div>
-
-      <!--/ Visual Effects. -->
-
     </div>
+  </div>
+</section>
 
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <!-- Visual Effects. -->
+        <div class="content">
+          <h2 class="title is-3">Quantitative comparisons</h2>
+
+          <p>
+            Quantitative comparisons between original SD1.4,SD2.1,SD3-medium and our method.
+          </p>
+          <table>
+            <tr>
+                <th>methods</th>
+                <th colspan="4">Three Subjects Datasets (21 prompts)</th>
+            </tr>
+            <tr>
+                <th>Question Types</th>
+                <td>Existence</td>
+                <td>Recognizability</td>
+                <td>with out Mixture</td>
+                <td>text-to-text similarity</td>
+            </tr>
+            <tr>
+                <th>SD3</th>
+                <td>33.54</td>
+                <td>30.31</td>
+                <td>70.08 </td>
+                <td>73.82</td>
+            </tr>
+            <tr>
+                <th>Ours</th>
+                <td>57.92</td>
+                <td>53.08</td>
+                <td>77.15</td>
+                <td>74.96</td>
+            </tr>
+          </table>
+
+          <table>
+            <tr>
+                <th>methods</th>
+                <th colspan="4">Animal-Animal (66 prompts)</th>
+            </tr>
+            <tr>
+                <th>Question Types</th>
+                <td>Existence</td>
+                <td>Recognizability</td>
+                <td>with out Mixture</td>
+                <td>text-to-text similarity</td>
+            </tr>
+            <tr>
+                <th>SD2</th>
+                <td>61.63</td>
+                <td>38.23</td>
+                <td>67.51</td>
+                <td>81.68</td>
+            </tr>
+            <tr>
+                <th>Ours</th>
+                <td>89.53</td>
+                <td>55.03</td>
+                <td>78.79</td>
+                <td>84.02</td>
+            </tr>
+          </table>
+
+          <table>
+            <tr>
+                <th>methods</th>
+                <th colspan="4">Animal-Animal (66 prompts)</th>
+            </tr>
+            <tr>
+                <th>Question Types</th>
+                <td>Existence</td>
+                <td>Recognizability</td>
+                <td>with out Mixture</td>
+                <td>text-to-text similarity</td>
+            </tr>
+            <tr>
+                <th>SD1</th>
+                <td>39.51</td>
+                <td>29.70</td>
+                <td>72.24</td>
+                <td>76.50</td>
+            </tr>
+            <tr>
+                <th>Ours</th>
+                <td>94.55</td>
+                <td>87.79</td>
+                <td>92.94</td>
+                <td>84.30</td>
+            </tr>
+          </table>
+        </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="section">
+  <div class="container is-max-desktop">
     <!-- Related Work. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
@@ -346,7 +447,6 @@
       </div>
     </div>
     <!--/ Related Work. -->
-
   </div>
 </section>
 
