--- a/index.html
+++ b/index.html
@@ -163,6 +163,28 @@
             Qualitative comparisons between original SD3-medium and our method.
               Notice that in SD3 we can use image-text attention maps instead of cross-attention maps and use image-image attention maps instead of self-attention maps.
           </p>
+
+          <table>
+            <tr>
+                <th>prompt</th>
+                <th colspan="4">a beagle and a collie and a husky</th>
+            </tr>
+            <tr>
+                <th>SD3</th>
+                <td><img src="static/images-for-githubio/original/a bear riding an elephant with a rabbit/311832740.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/original/a bear riding an elephant with a rabbit/944355760.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/original/a bear riding an elephant with a rabbit/1157314996.png" alt="Alice"></td>
+                <td><img src="static/images-for-githubio/original/a bear riding an elephant with a rabbit/1334603401.png" alt="Alice"></td>
+            </tr>
+            <tr>
+                <th>Ours</th>
+                <td><img src="static/images-for-githubio/ours/a bear riding an elephant with a rabbit/311832740.png"></td>
+                <td><img src="static/images-for-githubio/ours/a bear riding an elephant with a rabbit/944355760.png"></td>
+                <td><img src="static/images-for-githubio/ours/a bear riding an elephant with a rabbit/1157314996.png"></td>
+                <td><img src="static/images-for-githubio/ours/a bear riding an elephant with a rabbit/1334603401.png"></td>
+            </tr>
+          </table>
+
           <table>
             <tr>
                 <th>prompt</th>
