--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <table>
             <tr>
                 <th>prompt</th>
-                <th colspan="4">a beagle and a collie and a husky</th>
+                <th colspan="4">a bear riding an elephant with a rabbit</th>
             </tr>
             <tr>
                 <th>SD3</th>
