--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     }
 
     gtag('js', new Date());
-
     gtag('config', 'G-PYVRSFMDRL');
   </script>
 
@@ -448,7 +447,7 @@
 
         <div class="content has-text-justified">
           <p>
-            There's a lot of excellent work that was introduced around the same time as ours.
+            There's a lot of excellent work on this topic.
           </p>
           <p>
             <a href="https://conform-diffusion.github.io/">CONFORM: Contrast is All You Need For High-Fidelity Text-to-Image Diffusion Models</a>
