--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                   <span>Paper</span>
                 </a>
               </span>
+              <!-- PDF Link. -->
               <span class="link-block">
                 <a href="https://arxiv.org/abs/2411.18936"
                    class="external-link button is-normal is-rounded is-dark">
@@ -96,6 +97,16 @@
                       <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
+                  </a>
+              </span>
+              <!-- Dataset Link. -->
+              <span class="link-block">
+                <a href="https://github.com/mengtang-lab/selfcross-guidance/blob/main/prompts.txt"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Similar Subjects Dataset</span>
                   </a>
               </span>
             </div>
