--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
           <table>
             <tr>
                 <th>methods</th>
-                <th colspan="4">Three Subjects Datasets (21 prompts)</th>
+                <th colspan="4">Similar Subjects Dataset-3 (21 prompts)</th>
             </tr>
             <tr>
                 <th>Question Types</th>
