--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h1 class="title is-1 publication-title">Self-Cross Diffusion Guidance for Text-to-Image Synthesis of Similar Subjects</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=dhc_r6EAAAAJ&hl=en">Weimin Qiu</a><sup>1</sup>,</span>
+              <a href="https://qiuweimin1332499.github.io/qiuweimin.github.io/">Weimin Qiu</a><sup>1</sup>,</span>
             <span class="author-block">
               <a href="https://jackywang2001.github.io/">Jieke Wang</a><sup>1</sup>,</span>
             <span class="author-block">
